image webp test

--- a/opportunities.html
+++ b/opportunities.html
@@ -185,14 +185,14 @@
                 <div class="row" style="padding: 0;">
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6" style="display: flex;">
                         <div class="img_section">
-                            <img alt="Modern-Engineering" class="sale sale1 active_cont" style="display: none;transition: all 0.7s;opacity: 0;overflow: auto;overflow-y: hidden; border-radius: 6px;background: #fff;box-shadow:0 0 12px 0 rgba(0, 0, 0, 0.12);" src="./images/clarity.png" />
-                            <img alt="Modern-Engineering" class="sale sale2" style="display: none;transition: all 0.7s;opacity: 0;overflow: auto;overflow-y: hidden; border-radius: 6px;background: #fff;box-shadow:0 0 12px 0 rgba(0, 0, 0, 0.12);" src="./images/culture.png" />
-                            <img alt="Modern-Engineering" class="sale sale3" style="display: none;transition: all 0.7s;opacity: 0;overflow: auto;overflow-y: hidden; border-radius: 6px;background: #fff;box-shadow:0 0 12px 0 rgba(0, 0, 0, 0.12);" src="./images/competence.png" />
-                            <img alt="Modern-Engineering" class="sale sale4" style="display: none;transition: all 0.7s;opacity: 0;overflow: auto;overflow-y: hidden; border-radius: 6px;background: #fff;box-shadow:0 0 12px 0 rgba(0, 0, 0, 0.12);" src="./images/commitment.png" />
-                            <img alt="Modern-Engineering" class="sale sale5" style="display: none;transition: all 0.7s;opacity: 0;overflow: auto;overflow-y: hidden; border-radius: 6px;background: #fff;box-shadow:0 0 12px 0 rgba(0, 0, 0, 0.12);" src="./images/collaboration.png" />
+                            <img alt="Modern-Engineering" class="sale sale1 active_cont image_animation" style="display: none;transition: all 0.7s;opacity: 0;overflow: auto;overflow-y: hidden; border-radius: 6px;background: #fff;box-shadow:0 0 12px 0 rgba(0, 0, 0, 0.12);" src="./images/clarity.png" />
+                            <img alt="Modern-Engineering" class="sale sale2 image_animation" style="display: none;transition: all 0.7s;opacity: 0;overflow: auto;overflow-y: hidden; border-radius: 6px;background: #fff;box-shadow:0 0 12px 0 rgba(0, 0, 0, 0.12);" src="./images/culture.png" />
+                            <img alt="Modern-Engineering" class="sale sale3 image_animation" style="display: none;transition: all 0.7s;opacity: 0;overflow: auto;overflow-y: hidden; border-radius: 6px;background: #fff;box-shadow:0 0 12px 0 rgba(0, 0, 0, 0.12);" src="./images/competence.png" />
+                            <img alt="Modern-Engineering" class="sale sale4 image_animation" style="display: none;transition: all 0.7s;opacity: 0;overflow: auto;overflow-y: hidden; border-radius: 6px;background: #fff;box-shadow:0 0 12px 0 rgba(0, 0, 0, 0.12);" src="./images/commitment.png" />
+                            <img alt="Modern-Engineering" class="sale sale5 image_animation" style="display: none;transition: all 0.7s;opacity: 0;overflow: auto;overflow-y: hidden; border-radius: 6px;background: #fff;box-shadow:0 0 12px 0 rgba(0, 0, 0, 0.12);" src="./images/collaboration.png" />
                         </div>
                     </div>
-                    <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 section_content sale sale1 active_cont" style="display: none;transition: all 0.7s;opacity: 0;overflow: auto;overflow-y: hidden" >
+                    <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 section_content sale sale1 active_cont" >
                         <div class="icon_div col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12" style="display: flex;">
                             <div class="flag" style="background-color: transparent;">
                                 <!-- <img alt="monitor" src="./images/combined-shape.svg" style="width: 100px;height: 100%;" /> -->
@@ -213,7 +213,7 @@
                         </div>
 
                     </div>
-                    <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 section_content sale sale2" style="display: none;transition: all 0.7s;opacity: 0;overflow: auto;overflow-y: hidden" >
+                    <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 slider_animation section_content sale sale2" >
                         <div class="icon_div col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12" style="display: flex;">
                             <div class="flag" style="background-color: transparent;">
                                 <p class="fontGraphikMedium" style="color: #6455c2;margin-left: 0;border-radius: 10px;border: solid 1px rgba(100, 85, 194, 0.18);background-color: rgba(100, 85, 194, 0.05);padding: 8px 16px;">5C’s to Success</p>
@@ -232,7 +232,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 section_content sale sale3" style="display: none;transition: all 0.7s;opacity: 0;overflow: auto;overflow-y: hidden" >
+                    <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 slider_animation section_content sale sale3" >
                         <div class="icon_div col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12" style="display: flex;">
                             <div class="flag" style="background-color: transparent;">
                                 <p class="fontGraphikMedium" style="color: #6455c2;margin-left: 0;border-radius: 10px;border: solid 1px rgba(100, 85, 194, 0.18);background-color: rgba(100, 85, 194, 0.05);padding: 8px 16px;">5C’s to Success</p>
@@ -251,7 +251,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 section_content sale sale4" style="display: none;transition: all 0.7s;opacity: 0;overflow: auto;overflow-y: hidden" >
+                    <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 slider_animation section_content sale sale4" >
                         <div class="icon_div col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12" style="display: flex;">
                             <div class="flag" style="background-color: transparent;">
                                 <p class="fontGraphikMedium" style="color: #6455c2;margin-left: 0;border-radius: 10px;border: solid 1px rgba(100, 85, 194, 0.18);background-color: rgba(100, 85, 194, 0.05);padding: 8px 16px;">5C’s to Success</p>
@@ -270,7 +270,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 section_content sale sale5" style="display: none;transition: all 0.7s;opacity: 0;overflow: auto;overflow-y: hidden" >
+                    <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 slider_animation section_content sale sale5" >
                         <div class="icon_div col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12" style="display: flex;">
                             <div class="flag" style="background-color: transparent;">
                                 <p class="fontGraphikMedium" style="color: #6455c2;margin-left: 0;border-radius: 10px;border: solid 1px rgba(100, 85, 194, 0.18);background-color: rgba(100, 85, 194, 0.05);padding: 8px 16px;">5C’s to Success</p>
