image webp test mac one

--- a/opportunities.html
+++ b/opportunities.html
@@ -389,7 +389,7 @@
         <div class="container">
             <div class="text">
                 <h1 class="fontGraphikSemibold">
-                    Look at the Ambience
+                    Look at the Ambienceeeeeeeeee
                 </h1>
             </div>
             
