image webp test mac one more time script

--- a/opportunities.html
+++ b/opportunities.html
@@ -389,7 +389,7 @@
         <div class="container">
             <div class="text">
                 <h1 class="fontGraphikSemibold">
-                    Look at the Ambience
+                    Look at the Ambience sadsdss
                 </h1>
             </div>
             
@@ -837,7 +837,7 @@
 <!-- // Freshchat -->
 <script src="./plugin/freshchat/footer.js"></script>
 <!-- // Freshchat -->
-
+<script src="https://cdn.jsdelivr.net/modernizr/3.3.1/modernizr.min.js"></script>
 <!-- <script>window.fcWidget.init({ token: "9252e806-e958-4627-945f-57407a9a7a1a", host: "https://wchat.freshchat.com"});window.fcWidget.hide();</script> -->
 
 <script type="text/javascript">
