slider responsive fix

--- a/opportunities.html
+++ b/opportunities.html
@@ -2,44 +2,36 @@
 <html lang="en">
 
 <head>
-<!-- Google Tag Manager -->
-<script>
-    (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-N5454VZ');
-</script>
-<!-- End Google Tag Manager → -->
-        
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> 
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="author" content="Crayon'd">
-    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-    <meta name="theme-color" content="#334ac0">
-
-    <title>Crayon'd | Breathe Life Into Your Product idea</title> 
+    <!-- Google Tag Manager -->
+    <script>
+        (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','GTM-N5454VZ');
+    </script>
+    <!-- Fav Icon  -->
+    <link rel="shortcut icon" href="images/favicon_crayond.png">
+    
+    <!-- Site Title  -->
+    <title>Join Crayon'd -  Give life to New Product Ideas</title> 
     <meta name="description" content="We help startup founders and businesses across the globe to craft their ideas into world-class products.">
-    <link rel="canonical" href="https://www.crayond.com/"/>
+    <link rel="canonical" href="https://www.crayond.com/opportunities"/>
 
     <!-- Og meta dates -->
     <meta property="og:type" content="website" /> 
     <meta property="og:site_name" content="CRAYOND" /> 
-    <meta property="og:url" content="https://www.crayond.com/"> 
-    <meta property="og:title" content="Crayon'd | Breathe Life Into Your Product idea" /> 
+    <meta property="og:url" content="https://www.crayond.com/opportunities"> 
+    <meta property="og:title" content="Join Crayon'd -  Give life to New Product Ideas" /> 
     <meta property="og:description" content="We help startup founders and businesses across the globe to craft their ideas into world-class products.." /> 
     <meta property="og:image" content="https://crayond.com/images/OGImage.jpg" />
+
     <!-- Twitter mate date     -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@crayondofficial">
-    <meta name="twitter:title" content="Crayon'd | Breathe Life Into Your Product idea">
+    <meta name="twitter:title" content="Join Crayon'd -  Give life to New Product Ideas">
     <meta name="twitter:description" content="We help startup founders and businesses craft their ideas into world-class products">
     <meta name="twitter:image" content="https://crayond.com/images/OGImage.jpg">
-
-
-    <!-- favicon -->
-    <link rel="shortcut icon" href="./images/favicon_crayond.png">
 
     <!-- 4.0.0 bootstrap -->
     <link rel="stylesheet" href="./plugin/4.0.0_bootstrap.min.css">
@@ -185,7 +177,7 @@
     <section class="why_us" id="design_section">
         <div class="container-fluid container_bg_section2 project_planing five_c">
             <div class="container" style="margin: auto;">
-                <div class="row" style="padding: 0;">
+                <div class="row" style="padding: 0;overflow: hidden;">
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6" style="display: flex;">
                         <div class="img_section">
                             <img alt="Modern-Engineering" class="sale sale1 active_cont image_animation" style="display: none;transition: all 0.7s;opacity: 0;overflow: auto;overflow-y: hidden; border-radius: 6px;background: #fff;box-shadow:0 0 12px 0 rgba(0, 0, 0, 0.12);" src="./images/clarity.png" />
@@ -195,7 +187,7 @@
                             <img alt="Modern-Engineering" class="sale sale5 image_animation" style="display: none;transition: all 0.7s;opacity: 0;overflow: auto;overflow-y: hidden; border-radius: 6px;background: #fff;box-shadow:0 0 12px 0 rgba(0, 0, 0, 0.12);" src="./images/collaboration.png" />
                         </div>
                     </div>
-                    <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 section_content sale sale1 active_cont" >
+                    <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 slider_animation section_content sale sale1 active_cont" >
                         <div class="icon_div col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12" style="display: flex;">
                             <div class="flag" style="background-color: transparent;">
                                 <!-- <img alt="monitor" src="./images/combined-shape.svg" style="width: 100px;height: 100%;" /> -->
@@ -653,8 +645,8 @@
     <!-- end -->
 
     <!-- life@crayond -->
-    <div class="current_opening">
-    <div class="col-md-12 col-sm-12 col-xs-12 contact">
+    <section class="current_opening">
+        <div class="col-md-12 col-sm-12 col-xs-12 contact">
         <!-- <div class="container"> -->
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 box_info">
             <span class="image_box">
@@ -669,18 +661,7 @@
           </div>
         <!-- </div> -->
        </div>
-       </div>
-    <!-- <section class="life_crayond">
-        <div class="container">
-            <div class="col-12  col-sm-12 col-md-12 col-lg-12 col-xl-12">
-                <span></span>
-                <div class="life_text">
-                    <p class="discription_life fontLatoRegular">OR EMAIL YOUR RESUME, WE'LL FIGURE OUT WHERE YOU FIT IN</p>
-                    <span style="font-size: 20px"><a href="mailto:life@crayond.com?Subject=Hey" target="_top" class="fontGraphikMedium">life@crayond.com</a></span>
-                </div>
-            </div>
-        </div>
-    </section> -->
+    </section>
     <!-- end -->
 
 
@@ -927,7 +908,7 @@
     }
 
     $(".show_all_jop_offers").click(function(){
-       $(".hiden_section_open_list").css("height", "520px");
+       $(".hiden_section_open_list").css("height", "480px");
        $(".show_close_jop_offers").css("display", "block");
        $(this).css("display", "none");
     });
