--- a/opportunities.html
+++ b/opportunities.html
@@ -171,10 +171,10 @@
             <div class="text">
                 <div class="col-12 col-xs-12 col-sm-12 col-md-10 offset-md-1 col-lg-10 offset-lg-1 col-xl-10 offset-xl-1 floatr_card">
                 <h1 class="fontGraphikSemibold">
-                    Make dreams — Come true
+                    Make Dreams — Come True
                 </h1>
                 <p class="banner--des fontLatoRegular">
-                    We understand that it's an incredibly large mission that our team of young minds is committed to succeed in. Crayon'd has enjoyed helping startup founders to take their dream one step closer by building a winning product in the marketplace.
+                    We enjoy helping startup founders with bringing their dreams closer to reality by building a winning product for the marketplace.
                 </p>
                 </div>
             </div>
@@ -200,7 +200,7 @@
                         <div class="icon_div col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12" style="display: flex;">
                             <div class="flag" style="background-color: transparent;">
                                 <!-- <img alt="monitor" src="./images/combined-shape.svg" style="width: 100px;height: 100%;" /> -->
-                                <p class="fontGraphikMedium" style="color: #6455c2;margin-left: 0;border-radius: 10px;border: solid 1px rgba(100, 85, 194, 0.18);background-color: rgba(100, 85, 194, 0.05);padding: 8px 16px;">5C’s to Success</p>
+                                <p class="fontGraphikMedium" style="color: #6455c2;margin-left: 0;border-radius: 10px;border: solid 1px rgba(100, 85, 194, 0.18);background-color: rgba(100, 85, 194, 0.05);padding: 8px 16px;">Our Values</p>
                             </div>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
@@ -212,7 +212,7 @@
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12 sale sale1 active_cont" style="display: none;transition: all 0.7s;opacity: 0;overflow: auto;overflow-y: hidden">
                             <p class="text_para fontLatoRegular">
-                                If you don’t stand for something, you will fall for anything. It’s such a messy world filled with distractions often disguised in the form of opportunities. You will end up nowhere if you don’t have a strong purpose that justifies each of your action. What is your vision statement?. Is your entire team glued to it?. Do you know where you are going?. Clarity is Mastery!
+                                In a messy world of distractions often disguised as opportunities, you need a strong purpose that guides your actions. What is your vision statement? Is your entire team glued to it? Do you know where you are going? Clarity brings forth mastery.
                             </p>
                         </div>
 
@@ -220,7 +220,7 @@
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 slider_animation section_content sale sale2" >
                         <div class="icon_div col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12" style="display: flex;">
                             <div class="flag" style="background-color: transparent;">
-                                <p class="fontGraphikMedium" style="color: #6455c2;margin-left: 0;border-radius: 10px;border: solid 1px rgba(100, 85, 194, 0.18);background-color: rgba(100, 85, 194, 0.05);padding: 8px 16px;">5C’s to Success</p>
+                                <p class="fontGraphikMedium" style="color: #6455c2;margin-left: 0;border-radius: 10px;border: solid 1px rgba(100, 85, 194, 0.18);background-color: rgba(100, 85, 194, 0.05);padding: 8px 16px;">Our Values</p>
                             </div>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
@@ -232,14 +232,14 @@
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                             <p class="text_para fontLatoRegular">
-                                What makes your brand different?. Why should interesting people associate with you?. To win in the marketplace, you must first win in the workplace. The 3 ingredients of a winning culture according to me are Mutual Respect, Growth, Motivation. Culture has the force to make or break teams. A right culture is a catalyst for exponential growth. Culture is King!
+                                A catalyst for exponential growth, culture makes or breaks a team. To win in the marketplace, you must first win at the workplace. So, tell us, what makes you unique? Are mutual respect, growth, and motivation at the core of what you do?
                             </p>
                         </div>
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 slider_animation section_content sale sale3" >
                         <div class="icon_div col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12" style="display: flex;">
                             <div class="flag" style="background-color: transparent;">
-                                <p class="fontGraphikMedium" style="color: #6455c2;margin-left: 0;border-radius: 10px;border: solid 1px rgba(100, 85, 194, 0.18);background-color: rgba(100, 85, 194, 0.05);padding: 8px 16px;">5C’s to Success</p>
+                                <p class="fontGraphikMedium" style="color: #6455c2;margin-left: 0;border-radius: 10px;border: solid 1px rgba(100, 85, 194, 0.18);background-color: rgba(100, 85, 194, 0.05);padding: 8px 16px;">Our Values</p>
                             </div>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
@@ -251,14 +251,14 @@
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                             <p class="text_para fontLatoRegular">
-                                The competence has a direct impact on how far the brand can grow how soon. It is imperative for individuals to stand up and it’s important for teams to evolve over time. The learning curves are getting shorter and limits for innovation are stretched. Extra-ordinary will soon become the norm. The teams that can out think and out class others will win over the long run. Competence Thrives!
+                                Tight markets have brought innovation to an all-time rise. To grow under such competition, your team needs to be on their toes. Keep learning curves short and focus on the important⁠— over the long run, you will outpace everyone. Competency wins!
                             </p>
                         </div>
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 slider_animation section_content sale sale4" >
                         <div class="icon_div col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12" style="display: flex;">
                             <div class="flag" style="background-color: transparent;">
-                                <p class="fontGraphikMedium" style="color: #6455c2;margin-left: 0;border-radius: 10px;border: solid 1px rgba(100, 85, 194, 0.18);background-color: rgba(100, 85, 194, 0.05);padding: 8px 16px;">5C’s to Success</p>
+                                <p class="fontGraphikMedium" style="color: #6455c2;margin-left: 0;border-radius: 10px;border: solid 1px rgba(100, 85, 194, 0.18);background-color: rgba(100, 85, 194, 0.05);padding: 8px 16px;">Our Values</p>
                             </div>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
@@ -270,14 +270,14 @@
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                             <p class="text_para fontLatoRegular">
-                                Most overnight success took years. Every startup is a journey and most often than not everything is an unknown. If there can be one constant, that has got to be the vision. If there is something that can get you to the vision, it is commitment. The chances of a startup success is magnified if the entire team has the same level of commitment as that of the founding team towards the vision. Commitment Propels!
+                                When something new is built, the next wise step is never clearly known. Your vision is the only constant which can be driven solely by commitment. If your entire team is committed to the vision like yourself, then success is inevitable.
                             </p>
                         </div>
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 slider_animation section_content sale sale5" >
                         <div class="icon_div col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12" style="display: flex;">
                             <div class="flag" style="background-color: transparent;">
-                                <p class="fontGraphikMedium" style="color: #6455c2;margin-left: 0;border-radius: 10px;border: solid 1px rgba(100, 85, 194, 0.18);background-color: rgba(100, 85, 194, 0.05);padding: 8px 16px;">5C’s to Success</p>
+                                <p class="fontGraphikMedium" style="color: #6455c2;margin-left: 0;border-radius: 10px;border: solid 1px rgba(100, 85, 194, 0.18);background-color: rgba(100, 85, 194, 0.05);padding: 8px 16px;">Our Values</p>
                             </div>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
@@ -289,7 +289,7 @@
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                             <p class="text_para fontLatoRegular">
-                                Collaboration is the keystone of startup success. It is incredible to think what is possible if few minds can come together with passion and skill. Very few succeed alone but almost everyone can succeed in a team. Collaboration is about bringing many gifts from each individual and sharing them in pursuit of a common goal. It’s about bringing ideas, passion, mind, heart, and soul to the Organization leadership and culture. Collaboration Wins!
+                                Few succeed alone but everyone can succeed when in a team. To reach your goal at an unprecedented pace, your team has to pour their individual talents onto a common goal. When everyone helps everyone out, growth comes on its own. Collaboration wins!
                             </p>
                         </div>
                     </div>
@@ -323,7 +323,7 @@
                     Second Home. Epic Work. Fun Unlimited.
                 </h1>
                 <p class="description">
-                    We truly believe in the words of Henry Ford who famously said, "If everyone is moving forward together, then success takes care of itself". Our goal is to create an environment that encourages young minds to harness their talent to create long lasting success and put a dent.
+                    We believe in individuals growing together. Our goal: To create an environment where young minds learn constantly, and then go on to put their abilities out and create long-lasting success.
                 </p>    
             </div>
         </div>
@@ -393,7 +393,7 @@
         <div class="container">
             <div class="text">
                 <h1 class="fontGraphikSemibold">
-                    Look at the Ambience
+                    Our Mascots in Action
                 </h1>
             </div>
             
@@ -433,11 +433,11 @@
         <div class="container">
             <div class="text">
                 <h1 class="fontGraphikSemibold">
-                        Our secret
+                    Our Three Traits
                 </h1>
                 
             </div>
-            <div class="row">
+            <div class="row" style="background: none;">
                 <div class="card__body_div col-12 col-sm-12 col-xs-12 col-md-4 col-lg-4 col-xl-4">
                     <div class="card">
                         <div class="card__body">
@@ -566,7 +566,7 @@
                             <p class="fontLatoRegular" >Chennai</p>
                         </div>
                         <div class="col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4" style="display: flex;">
-                            <button class="fontLatoBlack" onclick="window.fcWidget.open();window.fcWidget.show();">WRITE TO US</button>
+                            <button class="fontLatoBlack button_write" onclick="window.fcWidget.open();window.fcWidget.show();">WRITE TO US</button>
                         </div>
                     </div>
                     <span class="apply_arrow" style="display: none;" onclick="window.fcWidget.open();window.fcWidget.show();">
@@ -600,7 +600,7 @@
                             <p class="fontLatoRegular">Chennai</p>
                         </div>
                         <div class="col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4" style="display: flex;">
-                            <button class="fontLatoBlack" onclick="window.fcWidget.open();window.fcWidget.show();">WRITE TO US</button>
+                            <button class="fontLatoBlack button_write" onclick="window.fcWidget.open();window.fcWidget.show();">WRITE TO US</button>
                         </div>
                     </div>
                     <span class="apply_arrow" style="display: none;" onclick="window.fcWidget.open();window.fcWidget.show();">
@@ -682,7 +682,7 @@
             <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12" style="text-align: center;">
                 <h1 class="fontGraphikSemibold">Interested? We're hiring.</h1>
                 <p style="color: #fff;">
-                    If you are crazy and looking to be part of an amazing set of people doing awe-inspiring work <br>to change the world, you have a compelling reason to join us.
+                    Have a passion burning inside you? Bring it on! At Crayon’d, everyone is equally fired-up to <br/>impact the world through their work, just like yourself.
                 </p>
             </div>
             <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 button_div">
