--- a/opportunities.html
+++ b/opportunities.html
@@ -154,7 +154,7 @@
             <!-- <source src="https://storage.googleapis.com/coverr-main/mp4/Mt_Baker.mp4" type="video/mp4"> -->
             <!-- <source src="https://www.crayond.com/images/demonstration.mp4" type="video/mp4"> -->
         <!-- </video> -->
-        <img class="team_img" style="display: none;" src="./images/team.JPG"/>
+        <!-- <img class="team_img" style="display: none;" src="./images/team.JPG"/> -->
         <div class="container h-100">
             <div class="d-flex h-100 text-center align-items-center">
             <div class="w-100 text-white">
