auto scroll completed

--- a/who-we-are.html
+++ b/who-we-are.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<d/div>
 <!-- Google Tag Manager -->
 <script>
     (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -222,19 +222,69 @@
     <!-- end -->
 
     <section class="time_line_his">
-        <!-- <div class="container"> -->
+        <div class="row" style="margin: auto;">
             <div class="container">
                 <div class="text">
                     <h1 class="fontGraphikSemibold">About Crayon’d</h1>
                     <img alt="line 2" class="divider_line" src="./images/line-2.png" />
                 </div>
             </div>
-            <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 col-xl-12 horizontal_time_line">
+            <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 col-xl-12" style="padding: 0;">
+            <div class="left_arrow arrow_line" >
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 240.823 240.823" style="enable-background:new 0 0 240.823 240.823;" xml:space="preserve">
+                    <g>
+                        <path id="Chevron_Right" d="M57.633,129.007L165.93,237.268c4.752,4.74,12.451,4.74,17.215,0c4.752-4.74,4.752-12.439,0-17.179   l-99.707-99.671l99.695-99.671c4.752-4.74,4.752-12.439,0-17.191c-4.752-4.74-12.463-4.74-17.215,0L57.621,111.816   C52.942,116.507,52.942,124.327,57.633,129.007z"/>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    </svg>
+            </div>
+            <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 col-xl-12 horizontal_time_line arrow_line">
                 <div class="time_line_year pyro" id="2012_details">
                     <div class="before"></div>
                     <div class="after"></div>
                     <ul >
-                        <p class="year_title">2012</p>
+                        <p class="year_title" id="2012_title">2012</p>
                         <li class="bottom_content">
                             <svg xmlns="http://www.w3.org/2000/svg" width="34" height="32" viewBox="0 0 34 32">
                                 <g fill="#D9B400" fill-rule="nonzero">
@@ -515,10 +565,11 @@
                     </ul>
                 </div>
                 <div class="time_line_year" id="2019_details">
+                    
                     <div class="before"></div>
                     <div class="after"></div>
                     <ul>
-                        <p class="year_title">2019</p>
+                        <p class="year_title" id="2019_title">2019</p>
                         <li class="bottom_content">
                             <svg xmlns="http://www.w3.org/2000/svg" width="34" height="32" viewBox="0 0 34 32">
                                 <g fill="#D9B400" fill-rule="nonzero">
@@ -531,6 +582,46 @@
                     </ul>
                 </div>
             </div>
+            <div class="right_arrow arrow_line">
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 185.343 185.343" style="enable-background:new 0 0 185.343 185.343;" xml:space="preserve">
+                    <g>
+                        <g>
+                            <path d="M51.707,185.343c-2.741,0-5.493-1.044-7.593-3.149c-4.194-4.194-4.194-10.981,0-15.175    l74.352-74.347L44.114,18.32c-4.194-4.194-4.194-10.987,0-15.175c4.194-4.194,10.987-4.194,15.18,0l81.934,81.934    c4.194,4.194,4.194,10.987,0,15.175l-81.934,81.939C57.201,184.293,54.454,185.343,51.707,185.343z"/>
+                        </g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                </svg>
+            </div>
+            </div>
             <div class="col-12 col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 menu_year" style="overflow: auto;">
                 <span class="time_line_year_btn fontGraphikMedium active" id="2012_timeline" data-title="2012_details" >2012</span>
                 <span class="time_line_year_btn fontGraphikMedium" id="2013_timeline" data-title="2013_details">2013</span>
@@ -540,9 +631,9 @@
                 <span class="time_line_year_btn fontGraphikMedium" id="2018_timeline" data-title="2018_details">2018</span>
                 <span class="time_line_year_btn fontGraphikMedium" id="2019_timeline" data-title="2019_details">2019</span>
             </div>
-        <!-- </div> -->
-        <div id="speed"></div>
-        <div id="scroll"></div>
+        </div>
+        <!-- <div id="speed"></div> -->
+        <!-- <div id="scroll"></div> -->
     </section>
 
     <!-- our_culture -->
@@ -870,7 +961,20 @@
     };
     $(".horizontal_time_line").scroll(function(e) {
         e.scrollLeft
-        debugger
+        // if($("#2019_title").isOnScreen() == true) {
+        //     // alert("djfb")
+        //     $(".right_arrow").css("margin-right", "-100px");
+        //     $(".left_arrow").css("margin-left", "0px");
+        // }
+        // if($("#2012_title").isOnScreen() == true) {
+        //     // alert("djfb")
+        //     $(".left_arrow").css("margin-left", "-100px");
+        //     $(".right_arrow").css("margin-right", "0px");
+        // }else{
+        //     $(".left_arrow").css("margin-left", "0px");
+        // }
+
+
         if ($('#2012_details ul').isOnScreen() == true) {
            $(".time_line_year_btn").removeClass("active");
            $("#2012_timeline").addClass("active");
@@ -946,23 +1050,66 @@
     var container_w = container.width();
     var max_scroll = container[0].scrollWidth - container.outerWidth();
 
-    container.on('mousemove', function(e) {
+    $(".left_arrow").on('mousemove', function(e) {
         var mouse_x = e.pageX - container.offset().left;
         var mouseperc = 100 * mouse_x / container_w;
         speed = mouseperc - 50;
+
+        // if(scroll == 0){
+        //     $(".left_arrow").css("margin-left", "-100px");
+        // }
+        // if(scroll !== max_scroll){
+        //     $(".right_arrow").css("margin-left", "0px");
+        // }
     }).on ( 'mouseleave', function() {
         speed = 0;
     });
 
+    $(".right_arrow").on('mousemove', function(e) {
+        var mouse_x = e.pageX - container.offset().left;
+        var mouseperc = 100 * mouse_x / container_w;
+        speed = mouseperc - 50;
+
+        // if(scroll !== 0){
+        //     $(".left_arrow").css("margin-left", "0px");
+        // }
+        // if(scroll == max_scroll){
+        //     $(".right_arrow").css("margin-left", "-100px");
+        // }
+    }).on ( 'mouseleave', function() {
+        speed = 0;
+    });
+
+    $(".arrow_line").on('mouseover', function(){
+        $(".left_arrow").css("display", "flex");
+        $(".right_arrow").css("display", "flex");
+    })
+    $(".arrow_line").on('mouseout', function(){
+        $(".left_arrow").css("display", "none");
+        $(".right_arrow").css("display", "none");
+    })
+
     function updatescroll() {
             if (speed !== 0 && speed > 40 || speed < -40) {
-                scroll += speed / 5;
+                scroll += speed / 16;
+                // scroll = 10
             if (scroll < 0) scroll = 0;
             if (scroll > max_scroll) scroll = max_scroll;
                 $('.horizontal_time_line').scrollLeft(scroll);
         }
         $("#speed").html('Speed: ' + speed);
         $("#scroll").html('Scroll: ' + scroll);
+        if(scroll == 0){
+            $(".left_arrow").css("margin-left", "-100px");
+        }else{
+            $(".left_arrow").css("margin-left", "0px");
+        }
+        if(scroll == max_scroll){
+            console.log("last"+max_scroll)
+            $(".right_arrow").css("margin-right", "-100px");
+        }else{
+            $(".right_arrow").css("margin-right", "0px");
+        }
         window.requestAnimationFrame(updatescroll);
     }
     window.requestAnimationFrame(updatescroll);
