--- a/who-we-are.html
+++ b/who-we-are.html
@@ -226,7 +226,7 @@
             <div class="container">
                 <div class="text">
                     <h1 class="fontGraphikSemibold">About Crayon’d</h1>
-                    <img alt="line 2" class="divider_line" src="./images/line-2.png" />
+                    <img alt="line 2" class="divider_line" src="./images/line-drack.png" />
                 </div>
             </div>
             <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 col-xl-12" style="padding: 0;">
@@ -794,7 +794,7 @@
                             <h3 class="fontGraphikSemibold">But the castle remains&nbsp;&nbsp; unmoved.</h3>
                             <p class="fontLatoRegular">Adversity refounds Crayon'd. The question that asked ourselves was, 'Is there enough in the tank to rebuild?' The answer? A silent roar of a BIG YES.</p>
                         </li >
-                        <connectLine>
+                        <connectLine style="opacity: 0;">
                             <svg xmlns="http://www.w3.org/2000/svg" width="153" height="122" viewBox="0 0 153 122">
                                 <g fill="none" fill-rule="evenodd" stroke="#607AFF" stroke-width="2" transform="translate(1 1)">
                                     <path stroke-dasharray="4" d="M7 114.664c57 11.317 85.5-6.158 85.5-52.426S113.333-4.502 155 .825"/>
