--- a/opportunities.html
+++ b/opportunities.html
@@ -99,7 +99,7 @@
                         <span ><a class="fontLatoRegular" href="/who-we-are">Who We Are</a></span>
                         <span ><a class="fontLatoRegular" href="/ourapproach">Our Approach</a> </span>
                         <span style="position: relative;padding: 10px 15px 10px 0px;"><a class="fontLatoRegular" href="/products">Products</a><tag>NEW</tag></span>
-                        <span><a class="fontLatoRegular" href="https://medium.com/crayond" target="_blank">Blog</a></span>
+                        <span><a class="fontLatoRegular" href="https://www.crayond.com/blog" target="_blank">Blog</a></span>
                         <span><a class="fontLatoRegular" href="/contact">Contact</a></span>
                     </div>
                     <div class="col-6 col-xs-6 col-ms-6 col-md-3 col-lg-3 col-xl-3 sign_btn">
@@ -129,7 +129,7 @@
             </li>
             <li class="menu-item" style="position: relative;"><a href="./products">Products</a><tag>NEW</tag>
             </li>
-            <li class="menu-item"><a href="https://medium.com/crayond" target="_blank">Blog</a>
+            <li class="menu-item"><a href="https://www.crayond.com/blog" target="_blank">Blog</a>
             </li>
             <li class="menu-item"><a href="./contact">Contact</a>
             </li>
@@ -750,7 +750,7 @@
                         </ul> -->
                     </div>
                     <div class="col-6 col-sm-12 col-xs-6 col-md-1 col-lg-1 col-xl-1 menu_list" style="margin: auto;">
-                        <a href="https://medium.com/crayond" target="_blank" alt="Blogs" style="color: unset;">
+                        <a href="https://www.crayond.com/blog" target="_blank" alt="Blogs" style="color: unset;">
                          <span class="fontLatoBold footer_menu">
                             Blog
                          </span>
