--- a/products.html
+++ b/products.html
@@ -112,7 +112,7 @@ input:focus:invalid {
                         <span ><a class="fontLatoRegular" href="/who-we-are">Who We Are</a></span>
                         <span><a class="fontLatoRegular" href="/ourapproach">Our Approach</a> </span>
                         <span class="active" style="position: relative;padding: 10px 15px 10px 0px;"><a class="fontLatoRegular" href="/products">Products</a><tag>NEW</tag></span>
-                        <span><a class="fontLatoRegular" href="https://medium.com/crayond" target="_blank">Blog</a></span>
+                        <span><a class="fontLatoRegular" href="https://www.crayond.com/blog" target="_blank">Blog</a></span>
                         <span><a class="fontLatoRegular" href="/contact">Contact</a></span>
                     </div>
                     <div class="col-6 col-xs-6 col-ms-6 col-md-3 col-lg-3 col-xl-3 sign_btn">
@@ -142,7 +142,7 @@ input:focus:invalid {
             </li>
             <li class="menu-item active" style="position: relative;"><a href="./products">Products</a><tag>NEW</tag>
             </li>
-            <li class="menu-item"><a href="https://medium.com/crayond" target="_blank">Blog</a>
+            <li class="menu-item"><a href="https://www.crayond.com/blog" target="_blank">Blog</a>
             </li>
             <li class="menu-item"><a href="./contact">Contact</a>
             </li>
