content changed to center

--- a/privacy.html
+++ b/privacy.html
@@ -710,13 +710,10 @@
         var elmnt = document.getElementById(x).scrollIntoView(
             {
                 behavior: "smooth",
-                block: "start"
+                block: "center"
             }
         );
     // window.document.getElementById(x).scrollTop(0);
     }
 </script>
-
-
-
 </html>
