side border finished

--- a/privacy.html
+++ b/privacy.html
@@ -597,50 +597,50 @@
                             PRIVACY POLICY
                         </div>
                         <div class=" row  linksz fontLatoRegular " id="linksz" onclick="scrollWin('id1', 0)">
-                            <div class="cb-factor__item_1" id="item1"> </div> Introduction
+                            <span class="cb-factor__item_1" id="item1"> </span> Introduction
                         </div>
                         <div class="  row linksz fontLatoRegular"  id="linksz"  onclick="scrollWin('id2', 0)">
-                            <div class="cb-factor__item_1" id="item1"></div> Terms of Use
+                            <span class="cb-factor__item_1" id="item1"></span> Terms of Use
 
                         </div>
                         <div class="  row linksz fontLatoRegular"  id="linksz"  onclick="scrollWin('id3', 0)">
-                            <div class="cb-factor__item_1"id="item1" ></div> Accepting the Terms
+                            <span class="cb-factor__item_1"id="item1" ></span> Accepting the Terms
 
                         </div>
                         <div class="  row linksz fontLatoRegular"  id="linksz"  onclick="scrollWin('id4', 0)">
-                            <div class="cb-factor__item_1" id="item1"></div> Definitions
+                            <span class="cb-factor__item_1" id="item1"></span> Definitions
 
                         </div>
                         <div class="  row linksz fontLatoRegular"   id="linksz" onclick="scrollWin('id5', 0)">
-                            <div class="cb-factor__item_1" id="item1"></div>What Service(s) do we Provide?
+                            <span class="cb-factor__item_1" id="item1"></span>What Service(s) do we Provide?
 
                         </div>
                         <div class="  row linksz fontLatoRegular"  id="linksz"  onclick="scrollWin('id6', 0)">
-                            <div class="cb-factor__item_1" id="item1"></div> Lawful Basis of Processing
+                            <span class="cb-factor__item_1" id="item1"></span> Lawful Basis of Processing
 
                         </div>
                         <div class="  row linksz fontLatoRegular"   onclick="scrollWin('id7', 0)">
-                            <div class="cb-factor__item_1" id="item1"></div> Marketing Communication
+                            <span class="cb-factor__item_1" id="item1"></span> Marketing Communication
 
                         </div>
                         <div class="  row linksz fontLatoRegular"   id="linksz" onclick="scrollWin('id8', 0)">
-                            <div class="cb-factor__item_1" id="item1"></div> Social Media Apps
+                            <span class="cb-factor__item_1" id="item1"></span> Social Media Apps
 
                         </div>
                         <div class="  row linksz fontLatoRegular"   id="linksz" onclick="scrollWin('id9', 0)">
-                            <div class="cb-factor__item_1" id="item1"></div> Sharing of Personal Data
+                            <span class="cb-factor__item_1" id="item1"></span> Sharing of Personal Data
 
                         </div>
                         <div class="  row linksz fontLatoRegular"   id="linksz" onclick="scrollWin('id10', 0)">
-                            <div class="cb-factor__item_1" id="item1"></div> Data Protection Rights
+                            <span class="cb-factor__item_1" id="item1"></span> Data Protection Rights
 
                         </div>
                         <div class="  row linksz fontLatoRegular"   id="linksz" onclick="scrollWin('id11', 0)">
-                            <div class="cb-factor__item_1" id="item1"></div> Retention of Your Information
+                            <span class="cb-factor__item_1" id="item1"></span> Retention of Your Information
 
                         </div>
                         <div class="  row linksz fontLatoRegular" id="linksz"  onclick="scrollWin('id12', 0)">
-                            <div class="cb-factor__item_1" id="item1"></div> Contact Our Data Protection Officer
+                            <span class="cb-factor__item_1" id="item1"></span> Contact Our Data Protection Officer
                         </div>
 
                     </div>
@@ -742,8 +742,7 @@
                 behavior: "smooth",
                 block: "center"
             }
-        );
-        // window.document.getElementById(x).scrollTop(0);
+        ); // window.document.getElementById(x).scrollTop(0);
     }
     $('.linksz').click(function () {
         
@@ -751,8 +750,6 @@
         
         $(this).addClass("sidePadding");
     });
-
-
 </script>
 
 </html>
