scroll chances is rectified

--- a/privacy.html
+++ b/privacy.html
@@ -607,7 +607,7 @@
 
                 </div>
                 <div id="right_side_content" class="right_side col-sm-5  col-md-5  col-lg-5  hidden-xs">
-
+                    <div class="container">
                     <div class="head_right fontGraphikSemibold">
                         PRIVACY POLICY
                     </div>
@@ -619,23 +619,15 @@
                     </div>
                     <div class="  row linksz fontLatoRegular" id="linksz" onclick="scrollWin('id3', 0)">
                         <span class="cb-factor__item_1" id="item1"></span> When Crayon’d process Data?
-
-
                     </div>
                     <div class="  row linksz fontLatoRegular" id="linksz" onclick="scrollWin('id4', 0)">
                         <span class="cb-factor__item_1" id="item1"></span> Third-party disclosure
-
-
                     </div>
                     <div class="  row linksz fontLatoRegular" id="linksz" onclick="scrollWin('id5', 0)">
                         <span class="cb-factor__item_1" id="item1"></span>Third-party links
-
-
                     </div>
                     <div class="  row linksz fontLatoRegular" id="linksz" onclick="scrollWin('id6', 0)">
                         <span class="cb-factor__item_1" id="item1"></span>CAN SPAM Act
-
-
                     </div>
                     <div class="  row linksz fontLatoRegular" onclick="scrollWin('id7', 0)">
                         <span class="cb-factor__item_1" id="item1"></span> COPPA
@@ -656,6 +648,7 @@
                     </div>
 
                 </div>
+            </div>
             </div>
         </div>
     </div>
