--- a/productdetails.html
+++ b/productdetails.html
@@ -409,7 +409,7 @@
         },
         {
             "title": "Customer Churn Rate",
-            "body": "Churn rate refers to the percentage of your users, subscribers or customers who don’t renew their subscriptions or cancel it during a given period of time. The churn rate can turn out to be an important number for subscription-based companies. Now, say you started January with around 600 users, and at the end of the month you have 400 of them.<br/>Churn rate is calculated by dividing -<br>Users at beginning of period - Users at the end of the period/ Users at the beginning of the period. Hence, 600-400/600 = 33.33 % churn rate."
+            "body": "Churn rate refers to the percentage of your users, subscribers or customers who don’t renew their subscriptions or cancel it during a given period of time. The churn rate can turn out to be an important number for subscription-based companies. Now, say you started January with around 600 users, and at the end of the month you have 400 of them.<br/>Churn rate is calculated by dividing -<br />Users at beginning of period - Users at the end of the period/ Users at the beginning of the period. Hence, 600-400/600 = 33.33 % churn rate."
            
         },
         {
